<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".detail.tvshow.TvShowDetailFragment"
    android:fitsSystemWindows="true"
    android:background="@color/blue_500">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/progres_bar"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        app:lottie_autoPlay="true"
        app:lottie_fileName="loading_spinner.json"
        app:lottie_loop="true"/>

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:visibility="visible"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="@color/blue_700"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">

            <ImageView
                android:id="@+id/img_backdrop"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/image_backdrop"
                android:scaleType="centerCrop"
                android:alpha="0.8"
                tools:src="@color/placeholder"
                app:layout_collapseMode="parallax"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="bottom"
                android:background="@drawable/bg_img"
                app:layout_collapseMode="parallax"/>

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:paddingHorizontal="16dp"
                android:paddingVertical="8dp"
                android:text="@string/tv_title"
                android:textColor="@color/light_blue"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_collapseMode="parallax"/>

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:contentInsetStart="0dp"
                app:contentInsetStartWithNavigation="0dp"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Dark"/>
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scroll_layout"
        android:visibility="visible"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:fillViewport="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appbar"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/img_poster"
                android:layout_width="140dp"
                android:layout_height="200dp"
                android:layout_margin="16dp"
                android:scaleType="fitXY"
                android:src="@color/placeholder"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/image_poster" />

            <TextView
                android:id="@+id/tv_vote_average"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_margin="16dp"
                android:background="@drawable/bg_rating"
                android:gravity="center"
                android:text="@string/vote_average"
                android:textColor="@color/light_green"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/tv_release_year"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:layout_marginTop="16dp"
                android:text="@string/tv_release_year"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:fontFamily="monospace"
                app:layout_constraintStart_toEndOf="@id/img_poster"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_runtime"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/tv_runtime"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:fontFamily="monospace"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/img_poster"
                app:layout_constraintTop_toBottomOf="@id/tv_release_year" />

            <TextView
                android:id="@+id/tv_tagline"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:layout_marginTop="32dp"
                android:text="@string/tagline"
                android:textColor="@color/light_blue"
                android:textSize="18sp"
                android:fontFamily="monospace"
                android:alpha="0.5"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/img_poster"
                app:layout_constraintTop_toBottomOf="@+id/tv_runtime" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp"
                android:text="@string/description"
                android:textColor="@color/light_blue"
                android:textSize="18sp"
                android:textStyle="bold"
                android:fontFamily="monospace"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/img_poster" />

            <TextView
                android:id="@+id/tv_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:text="@string/description"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:lineSpacingMultiplier="1.5"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:src="@drawable/ic_favorite_border"
        android:contentDescription="@string/fab" />


</androidx.coordinatorlayout.widget.CoordinatorLayout>