<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.ekyrizky.favorite.tvshow.FavoriteTvShowFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_favorite_tvshow"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:listitem="@layout/items_list"/>

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/img_empty"
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:lottie_autoPlay="true"
        app:lottie_fileName="emptybox.json"
        app:lottie_loop="true"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/tv_empty"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@id/tv_empty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/empty_favorite"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>